- styling fix for inline code that was causing it to overflow

--- a/web_stuff/src/style.scss
+++ b/web_stuff/src/style.scss
@@ -93,9 +93,10 @@ thead {
 
 %doc_comment_common {
   margin-left: 20px;
-  code,
-  pre {
+  code, pre {
     background-color: $doc_code_bg;
+  }
+  pre code {
     white-space: pre;
   }
   pre {
